<resources>
    <string name="app_name">Breez Voice</string>
    <string name="cashier_login">Cashier Login</string>
    <string name="register_to_earn">Register to \nearn big rewards!</string>
    <string name="sign_in_to_earn">Sign in to \nearn big rewards!</string>
    <string name="cashier_id">Cashier ID</string>
    <string name="enter_cashier_req">Enter your Cashier ID</string>
    <string name="password">Password</string>
    <string name="enter_cashier_password">Enter Password</string>
    <string name="please_enter_cashier_id">Please enter Cashier ID</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_customer_name">Please enter customer name</string>
    <string name="please_enter_customer_mobile">Please enter customer number</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="please_enter_valid_number">Please enter valid number</string>
    <string name="proceed">Proceed</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="touchtostart">Touch To Start</string>
    <string name="your_cart">Your Cart</string>
    <string name="kcal">439 Kcal  /</string>
    <string name="protein">28.9g Protein  /</string>
    <string name="carbs">83.5g carbs  /</string>
    <string name="fat">83.5g Fat</string>
    <string name="_1">1</string>
    <string name="hello_breez">Say <b><i>\"Hello Breez\"</i></b> \n to get started</string>
    <string name="where_would_you_like_to_eat">Where would you like to eat?</string>
    <string name="dine_in">Dine In</string>
    <string name="take_out">Take Away</string>
    <string name="order_total">Order Total</string>
    <string name="_12_43">$00.00</string>
    <string name="rodeo_burger">Rodeo Burger</string>
    <string name="no_lettuce_no_tomato">No Lettuce No Tomato</string>
    <string name="all_categories">All Categories</string>
    <string name="category">Category</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="sorry_inconvenience">Sorry for the inconvenience</string>
    <string name="your_payment_has_failed_due_to_some_technical_error_please_try_again">Your payment has failed due to some technical error. Please try again</string>
    <string name="retry_payment">Retry Payment</string>
    <string name="scan_qr_description">Please place your mobile screen in front\nof the scanner to sign in.</string>
    <string name="user_not_found_description">We couldn\'t find your profile. You can\nregister or skip the sign in.</string>
    <string name="inconveninece_description">We couldn\'t process your command. You can\nproceed manually touching the screen</string>
    <string name="frequently_bought_together">Frequently Bought Together</string>
    <string name="chocolate_shake">Chocolate Shake</string>
    <string name="go_to_menu">Go To Menu</string>
    <string name="clear_cart_description">Are you sure you want to clear all items?</string>
    <string name="remove_item_from_cart">Are you sure you want to remove this item?</string>
    <string name="pay_now">Pay Now</string>
    <string name="explore_our_menu">Explore our menu!</string>
    <string name="item_name">Item Name</string>
    <string name="start_over">Start Over</string>
    <string name="item_description">Our Best-Selling Burger with Crispy Patty, Fresh\nOnion and our Signature Sauce.</string>
    <string name="make_it_meal_item">Coke, fries and cheese burger</string>
    <string name="thank_you">Thank You!</string>
    <string name="thank_you_descriptioon">Kindly collect your receipt and take\nyour order from the counter</string>
    <string name="your_orderno">Your order no. is</string>
    <string name="done">Done</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_number">Contact number</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="okay">Okay</string>
    <string name="user_not_found">User not found !</string>
    <string name="subtotal">Subtotal</string>
    <string name="_2_43">$2.43</string>
    <string name="total">Total</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="tax">Tax</string>
    <string name="voice_description">Try saying "view categories" or "add rodeo burger"…</string>
    <string name="please_insert_or_tap_your_credit_card">Please insert or tap\nyour credit card</string>
    <string name="sanjeev_varshney">Sanjeev Varshney</string>
    <string name="loyalty_points">Loyalty Points:</string>
    <string name="_2_000">2,000</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="add">Add</string>
    <string name="checkout">Checkout</string>
    <string name="sauce">Sauce</string>
    <string name="lettuce">Lettuce</string>
    <string name="bacon">Bacon</string>
    <string name="tomato">Tomato</string>
    <string name="cheese">Cheese</string>
    <string name="patty">Patty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_one">Fragment One</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="fragment_three">Fragment Three</string>
    <string name="fragment_four">Fragment Four</string>
    <string name="fragment_five">Fragment Five</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="view_categories">View Categories</string>
    <string name="mic_permission_title">Permissions Required!</string>
    <string name="mic_permission_required">In order to begin this app. Please provide mic and storage permissions.</string>
    <string name="open_setting">Open Setting</string>
    <string name="cancel">Cancel</string>
    <string name="item_total">Item Total</string>
    <string name="_10_49">$10.49</string>
    <string name="sign_in">SIGN IN</string>
    <string name="_101">101</string>
    <string name="size">Size</string>
    <string name="small">Small</string>
    <string name="spice">Spice</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="mild">Mild</string>
    <string name="hot">Hot</string>
    <string name="select_language">Select Language</string>
    <string name="make_it_a_meal">Make it a meal</string>
    <string name="select">Select</string>
    <string name="english">English</string>
    <string name="store_idd">Store ID</string>
    <string name="device_configuration">Device configuration</string>
    <string name="pos_Id">POS ID</string>
    <string name="company_id">Company ID</string>
    <string name="reset">Reset</string>
    <string name="select_your_items">Select Your Items</string>
    <string name="calling_assistant">Call Assistant</string>
    <string name="wait_for_a_moment_our_staff_is_coming_to_assist_you">Wait for a moment, our staff is coming\nto assist you.</string>
    <string name="sms">Sms</string>
    <string name="print">Print</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_mobile_no">Please enter your Phone number</string>
    <string name="invoice_receipt">Invoice</string>
    <string name="_9999999999">9999999999</string>
    <string name="please_insert_or_tap_your_card">Please insert or tap your card</string>
    <string name="Choose_from_the_option_given_below">Choose from the option given below. Say \'SKIP\'</string>
    <string name="Select_Your_Meal">Select Your Meal \'Say: Add Burger\' </string>
    <string name="Build_your_burger">Build your burger \'Say Add Tomato\' </string>
    <string name="Are_you_ready_to_checkout">Are you ready to checkout ? Say \'I want to pay\' </string>
    <string name="cancel_order">Cancel Order</string>
    <string name="amount">AMOUNT</string>
    <string name="check_for_update">Check for update</string>
    <string name="checking_for_update">Checking for update</string>
    <string name="collect_card_payment">Collect card payment</string>
    <string name="collect_payment">Collect payment</string>
    <string name="collect_payment_description">Collect a card payment using a physical Stripe test card and a card reader</string>
    <string name="common_workflows">COMMON WORKFLOWS</string>
    <string name="connecting">Connecting…</string>
    <string name="currency">CURRENCY</string>
    <string name="current_version">CURRENT VERSION</string>
    <string name="default_amount_int">100</string>
    <string name="default_amount_string">$1.00</string>
    <string name="disconnect">Disconnect</string>
    <string name="discovery">Discovery</string>
    <string name="discover_readers">Discover Readers</string>
    <string name="discovery_method">DISCOVERY METHOD</string>
    <string name="empty_reader">Empty Reader</string>
    <string name="event_log">EVENT LOG</string>
    <string name="install_explanation">Version %1$s available. The reader will become unresponsive until the update is complete. Estimated update time: %2$s.</string>
    <string name="install_update">Install update</string>
    <string name="installation_in_progress">The reader will temporarily become unresponsive. Do not leave this page, and keep the reader in range and powered on until the update is complete.</string>
    <string name="nearby_readers">NEARBY READERS</string>
    <string name="no_reader">No reader connected</string>
    <string name="no_update_available">No update available</string>
    <string name="read_card_for_recurring_payment">Read card for recurring payment</string>
    <string name="reader">Reader</string>
    <string name="reader_connection">READER CONNECTION</string>
    <string name="reader_description">%1$s %2$s</string>
    <string name="simulated">Simulated</string>
    <string name="simulation_explanation">The SDK comes with the ability to simulate behavior without using physical hardware. This makes it easy to quickly test your integration end-to-end, from connecting a reader to taking payments.</string>
    <string name="terminal">Terminal</string>
    <string name="testing">Testing</string>
    <string name="update_complete">Update complete</string>
    <string name="update_explanation">Check if a reader software update is available.</string>
    <string name="update_in_progress">Update in progress</string>
    <string name="update_progress">Update progress: %1$.1f%%</string>
    <string name="update_reader">Update Reader</string>
    <string name="update_reader_software">Update reader software</string>
    <string name="usd">USD</string>
    <string name="locations">Locations</string>
    <string name="select_location">Select Location</string>
    <string name="select_location_last">Last used location</string>
    <string name="select_location_list_title">%s Locations Found</string>
    <string name="select_location_list_title_more">%s+ Locations Found</string>
    <string name="profile_not_found">Profile not found!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="end_session">End Session</string>
    <string name="are_you_sure_you_want_to_end_session">Are you sure you want to end session?</string>
    <string name="network_issue">Network Issue</string>
    <string name="check_internet_message">We\'ll be back online shortly.\n Thank you for your patience!</string>
    <string name="error_details">An unexpected error occurred forcing\nthe application to stop. Please try again.</string>
    <string name="refresh">Refresh</string>
    <string name="restart">Restart</string>
</resources>