<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_dark_grey_round_corner_with_padding">

    <RelativeLayout
        android:id="@+id/rl_header_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_header"
            style="@style/textLargeBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/end_session"
            android:textAlignment="center" />



        <TextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/are_you_sure_you_want_to_end_session"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_medium" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tv_body"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            >

            <Button
                android:id="@+id/btn_no"
                style="@style/whiteBgmRedTextContainedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginEnd="@dimen/_5sdp"
                android:stateListAnimator="@null"
                android:textColor="@color/black"
                android:text="@string/no"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_yes"
                style="@style/redBgmWhiteTextContainedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginStart="@dimen/_5sdp"
                android:stateListAnimator="@null"
                android:text="@string/yes"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>



</LinearLayout>