<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_dark_grey_round_corner_with_padding">

    <RelativeLayout
        android:id="@+id/rl_header_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_header"
            style="@style/textLargeBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/profile_not_found"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/iv_close_dialog_user_not_found"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/icon_close"
            android:layout_alignParentEnd="true"
            >

        </ImageView>

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/user_not_found_description"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_medium" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tv_body"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            >

            <Button
                android:id="@+id/btn_skip_user_not_found"
                style="@style/whiteBgmRedTextContainedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:stateListAnimator="@null"
                android:textColor="@color/black"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/skip"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_register_user_not_found"
                style="@style/redBgmWhiteTextContainedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginStart="@dimen/_5sdp"
                android:stateListAnimator="@null"
                android:text="@string/register"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>





</LinearLayout>