<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_grey">

    <RelativeLayout
        android:id="@+id/rl_header_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_15sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_inconvinience" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_error"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
           style="@style/textXXLargeBold"
            android:text="@string/sorry_inconvenience"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/inconveninece_description"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_xlarge" />

        <Button
            android:id="@+id/btn_retry_payment"
            style="@style/redBgmWhiteTextContainedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_body"
            android:gravity="center"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:stateListAnimator="@null"
            android:text="@string/okay"
            android:textAllCaps="false" />
    </RelativeLayout>


</RelativeLayout>